# banner

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  TODO
game/: CMakeLists.txt  clear.cpp  main.cpp  test.cpp  tri_renderer.hpp  triangle.cpp
game/shaders/: shader.frag.glsl  shader.vert.glsl
game/tools/: compile-shaders.bat
include/banner/: banner.hpp  core.hpp  defs.hpp  fwd.hpp  gfx.hpp  util.hpp
include/banner/core/: engine.cpp  engine.hpp  math.hpp  platform.cpp  platform.hpp  types.hpp
include/banner/entity/: entity.hpp
include/banner/gfx/: device.cpp  device.hpp  graphics.cpp  graphics.hpp  memory.cpp  memory.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  vk_utils.cpp  vk_utils.hpp  vma.cpp  window.cpp  window.hpp
include/banner/gfx/res/: buffer.cpp  buffer.hpp  mesh.cpp  mesh.hpp  resource.hpp  vertex.hpp
include/banner/util/: banner.hpp  debug.cpp  debug.hpp  file.cpp  file.hpp  random.hpp  signal.hpp  time.hpp
shaders/: compile-shader.bat  main.frag.glsl  main.vert.glsl
src/: debug.cpp  debug.h  debug.hpp  defines.hpp  engine.cpp  engine.h  main.cpp  math.h  platform.cpp  platform.h  renderer.hpp  tri_renderer.cpp  tri_renderer.hpp  types.h  utility.h  vulkan_render.cpp  vulkan_render.h  vulkan_utils.h
src/common/: file.cpp  file.hpp  utility.hpp
src/core/: engine.cpp  engine.hpp  platform.cpp  platform.hpp
src/old_render/: vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_utils.hpp
src/render/: vulkan_graphics.cpp  vulkan_graphics.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_utils.cpp  vulkan_utils.hpp
tools/: compile-shader.bat
